feat: change script.js for HW Lesson 3

--- a/HW/dz_02_blank/unit_02/unit_02.html
+++ b/HW/dz_02_blank/unit_02/unit_02.html
@@ -295,6 +295,16 @@
         <button class="button-primary b-20">Task-20</button>
         <div class="out-20"></div>
       </section>
+      <section>
+        <p><b>Task 21.</b></p>
+        <p></p>
+        <p>Добавьте input самостоятельно</p>
+        <div class="form-control">
+          Input i-21<input type="text" class="i-21" />
+        </div>
+        <button class="button-primary b-21">Task-21</button>
+        <div class="out-21"></div>
+      </section>
     </div>
 
     <script src="unit_02.js"></script>
