feat:change HW for Lesson 4

--- a/HW/dz_05_blank/unit_05/unit_05.html
+++ b/HW/dz_05_blank/unit_05/unit_05.html
@@ -196,6 +196,8 @@
                 <input type="text" placeholder="Enter some info" class="i-13">
             </div>
             <button class="button-primary b-13">Task-13</button>
+            <div class="out-13"></div>
+
         </section>
 
         <section>
