--- a/HW/api_openWeather/index.html
+++ b/HW/api_openWeather/index.html
@@ -5,25 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>API Open Weather</title>
-    <!-- <link
-      rel="stylesheet"
-      <!-- href="https://unpkg.com/mustard-ui@latest/dist/css/mustart-ui.min.css" -->
-    /> -->
     <link
       rel="stylesheet"
       href="https://unpkg.com/mustard-ui@latest/dist/css/mustard-ui.min.css"
     />
-
-    <!-- <link rel="stylesheet" href="style.setUTCSeconds(seconds, milliseconds)" /> -->
   </head>
   <body>
     <section>
       <div class="container">
         <div class="row">
-          <div class="col col-lg-12 text-center"></div>
-          <h1>Open Weather</h1>
-          <h2>JS 2.0</h2>
-          <h3>Test</h3>
+          <div class="col col-lg-12 text-center">
+            <h1>Open Weather</h1>
+            <h2>JS 2.0</h2>
+            <h3>Test</h3>
+          </div>
         </div>
         <div class="pricing-table row">
           <div class="package featured">
